Ensure logo is not overlapped by carousel focus styles

--- a/apollo/assets/styles/sass/50-core-components/_slide.scss
+++ b/apollo/assets/styles/sass/50-core-components/_slide.scss
@@ -92,6 +92,8 @@
 
 	@include txt-pluto;
 
+	padding-inline-start: rem(5);
+
 	&.l-sidebar .sidebar {
 
 		flex-basis: auto;
